Add PCB project

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,4 @@
 *.lck
+*.Zip
+Conception/Mechanical/Cup_Dispenser_3/Boards/Cup_Dispenser_Prototype/__Previews/Board.PcbDocPreview
+Conception/Mechanical/Cup_Dispenser_3/Boards/Cup_Dispenser_Prototype/__Previews/Schematic.SchDocPreview
